--- a/Proyecto/src/app/home/home.component.html
+++ b/Proyecto/src/app/home/home.component.html
@@ -1,6 +1,1 @@
-<nav class="navbar navbar-light bg-light static-top">
-    <div class="container">
-        <a class="navbar-brand" href="#!">Facturación</a>
-        <a class="btn btn-primary" href="#signup">Ingresar</a>
-    </div>
-</nav>
+<p>Hola mundo</p>
