Cambios en el navbar

--- a/Proyecto/src/app/componentes/pagina_comercial/nav/nav.component.html
+++ b/Proyecto/src/app/componentes/pagina_comercial/nav/nav.component.html
@@ -1,10 +1,10 @@
 <nav class="navbar navbar-light bg-light static-top">
     <div class="container">
         <a class="navbar-brand" [routerLink] = "['/home']" >Facturación</a>
-        <a class ="nb_element">Home</a>
-        <a class ="nb_element">Planes</a> <!--Definir rutas -->
-        <a class ="nb_element">Noticias</a>
-        <a class ="nb_element">Contáctenos</a>
+        <a class ="nb_element" (click) = "colornb($event)">Home</a>
+        <a class ="nb_element" (click) = "colornb($event)">Planes</a> <!--Definir rutas -->
+        <a class ="nb_element" (click) = "colornb($event)">Noticias</a>
+        <a class ="nb_element" (click) = "colornb($event)">Contáctenos</a>
         <a class="btn btn-primary" [routerLink] = "['/login']" >Ingresar</a>
     </div>
 </nav>
