--- a/Proyecto/src/app/componentes/pagina_comercial/nav/nav.component.css
+++ b/Proyecto/src/app/componentes/pagina_comercial/nav/nav.component.css
@@ -7,9 +7,13 @@
     font-size: 1.25rem;
     text-decoration:none;
     white-space: nowrap;
-    cursor: pointer;
+    
 }
 .nb_element:hover{
     background-color: lightslategray;
     color: black;
+    cursor: pointer;
+}
+.active2{
+    background-color: lightslategray;
 }
