--- a/Proyecto/src/app/componentes/pagina_comercial/plan/plan.component.html
+++ b/Proyecto/src/app/componentes/pagina_comercial/plan/plan.component.html
@@ -63,7 +63,7 @@
                     </div>
                     <div class="card-footer px-4 pb-4">
                         <!-- Button -->
-                        <a [routerLink]="['/contratar']"
+                        <a [routerLink]="['/registro']"
                             class="btn btn-block btn-outline-secondary animate-up-2">
                             Comprar <span class="icon icon-xs ml-3"><i class="fas fa-arrow-right"></i></span>
                         </a>
@@ -121,7 +121,7 @@
                     </div>
                     <div class="card-footer px-4 pb-4">
                         <!-- Button -->
-                        <a [routerLink]="['/contratar']" class="btn btn-block btn-outline-primary">
+                        <a [routerLink]="['/registro']" class="btn btn-block btn-outline-primary">
                             Comprar<span class="icon icon-xs ml-3"><i class="fas fa-arrow-right"></i></span>
                         </a>
                     </div>
@@ -178,7 +178,7 @@
                     </div>
                     <div class="card-footer px-4 pb-4">
                         <!-- Button -->
-                        <a [routerLink]="['/contratar']" class="btn btn-block btn-outline-primary">
+                        <a [routerLink]="['/registro']" class="btn btn-block btn-outline-primary">
                             Comprar<span class="icon icon-xs ml-3"><i class="fas fa-arrow-right"></i></span>
                         </a>
                     </div>
@@ -235,7 +235,7 @@
                     </div>
                     <div class="card-footer px-4 pb-4">
                         <!-- Button -->
-                        <a [routerLink]="['/contratar']" class="btn btn-block btn-outline-secondary">
+                        <a [routerLink]="['/registro']" class="btn btn-block btn-outline-secondary">
                             Comprar<span class="icon icon-xs ml-3"><i class="fas fa-arrow-right"></i></span>
                         </a>
                     </div>
@@ -292,7 +292,7 @@
                     </div>
                     <div class="card-footer px-4 pb-4">
                         <!-- Button -->
-                        <a [routerLink]="['/contratar']" class="btn btn-block btn-outline-primary">
+                        <a [routerLink]="['/registro']" class="btn btn-block btn-outline-primary">
                             Comprar<span class="icon icon-xs ml-3"><i class="fas fa-arrow-right"></i></span>
                         </a>
                     </div>
@@ -349,7 +349,7 @@
                     </div>
                     <div class="card-footer px-4 pb-4">
                         <!-- Button -->
-                        <a [routerLink]="['/contratar']" class="btn btn-block btn-outline-primary">
+                        <a [routerLink]="['/registro']" class="btn btn-block btn-outline-primary">
                             Comprar<span class="icon icon-xs ml-3"><i class="fas fa-arrow-right"></i></span>
                         </a>
                     </div>
@@ -410,7 +410,7 @@
                     </div>
                     <div class="card-footer px-4 pb-4">
                         <!-- Button -->
-                        <a [routerLink]="['/contratar']" class="btn btn-block btn-outline-secondary">
+                        <a [routerLink]="['/registro']" class="btn btn-block btn-outline-secondary">
                             Comprar<span class="icon icon-xs ml-3"><i class="fas fa-arrow-right"></i></span>
                         </a>
                     </div>
