--- a/Proyecto/src/app/componentes/pagina_comercial/registro/registro.component.html
+++ b/Proyecto/src/app/componentes/pagina_comercial/registro/registro.component.html
@@ -13,41 +13,41 @@
                                             <div class="col-md-6">
                                                 <div class="form-floating mb-3 mb-md-0">
                                                     <input class="form-control" id="inputFirstName" type="text" placeholder="Enter your first name">
-                                                    <label for="inputFirstName">First name</label>
+                                                    <label for="inputFirstName">Nombre</label>
                                                 </div>
                                             </div>
                                             <div class="col-md-6">
                                                 <div class="form-floating">
                                                     <input class="form-control" id="inputLastName" type="text" placeholder="Enter your last name">
-                                                    <label for="inputLastName">Last name</label>
+                                                    <label for="inputLastName">Apellido</label>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="form-floating mb-3">
                                             <input class="form-control" id="inputEmail" type="email" placeholder="name@example.com">
-                                            <label for="inputEmail">Email address</label>
+                                            <label for="inputEmail">Correo electrónico</label>
                                         </div>
                                         <div class="row mb-3">
                                             <div class="col-md-6">
                                                 <div class="form-floating mb-3 mb-md-0">
                                                     <input class="form-control" id="inputPassword" type="password" placeholder="Create a password">
-                                                    <label for="inputPassword">Password</label>
+                                                    <label for="inputPassword">Contraseña</label>
                                                 </div>
                                             </div>
                                             <div class="col-md-6">
                                                 <div class="form-floating mb-3 mb-md-0">
                                                     <input class="form-control" id="inputPasswordConfirm" type="password" placeholder="Confirm password">
-                                                    <label for="inputPasswordConfirm">Confirm Password</label>
+                                                    <label for="inputPasswordConfirm">Confirmar contraseña</label>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="mt-4 mb-0">
-                                            <div class="d-grid"><a class="btn btn-primary btn-block" href="login.html">Create Account</a></div>
+                                            <div class="d-grid"><a class="btn btn-primary btn-block" [routerLink] = "['/registro']">Inicie con su plan hoy!</a></div>
                                         </div>
                                     </form>
                                 </div>
                                 <div class="card-footer text-center py-3">
-                                    <div class="small"><a href="login.html">Have an account? Go to login</a></div>
+                                    <div class="small"><a [routerLink] = "['/login']">Ya posee una cuenta? Inicie sesión</a></div>
                                 </div>
                             </div>
                         </div>
