--- a/Proyecto/src/app/login/login.component.html
+++ b/Proyecto/src/app/login/login.component.html
@@ -28,7 +28,7 @@
                                     </form>
                                 </div>
                                 <div class="card-footer text-center py-3">
-                                    <div class="small"><a href="register.html">Need an account? Sign up!</a></div>
+                                    <div class="small"><a [routerLink] = "['/registro']">Todavia no posee un plan de facturacion? Inicie hoy!</a></div>
                                 </div>
                             </div>
                         </div>
