Componentes generados para la parte comercial

--- a/Proyecto/src/app/componentes/pagina_comercial/registro/registro.component.html
+++ b/Proyecto/src/app/componentes/pagina_comercial/registro/registro.component.html
@@ -1,4 +1,4 @@
-<body class="bg-primary">
+<body>
     <div id="layoutAuthentication">
         <div id="layoutAuthentication_content">
             <main>
@@ -6,20 +6,20 @@
                     <div class="row justify-content-center">
                         <div class="col-lg-7">
                             <div class="card shadow-lg border-0 rounded-lg mt-5">
-                                <div class="card-header"><h3 class="text-center font-weight-light my-4">Create Account</h3></div>
+                                <div class="card-header"><h3 class="text-center font-weight-light my-4">Si desea adquirir mayor información sobre nuestros planes.<br> Puede ponerse en contacto, para que uno de nuestros encargado lo atienda de manera personalizada.</h3></div>
                                 <div class="card-body">
                                     <form>
                                         <div class="row mb-3">
                                             <div class="col-md-6">
                                                 <div class="form-floating mb-3 mb-md-0">
-                                                    <input class="form-control" id="inputFirstName" type="text" placeholder="Enter your first name">
-                                                    <label for="inputFirstName">Nombre</label>
+                                                    <input class="form-control" id="inputRazonSocialName" type="text" placeholder="Ingresa nombre de tu empresa">
+                                                    <label for="inputFirstName">Razon Social</label>
                                                 </div>
                                             </div>
                                             <div class="col-md-6">
                                                 <div class="form-floating">
-                                                    <input class="form-control" id="inputLastName" type="text" placeholder="Enter your last name">
-                                                    <label for="inputLastName">Apellido</label>
+                                                    <input class="form-control" id="inputNames" type="text" placeholder="Ingresa tus nombres">
+                                                    <label for="inputLastName">Nombres</label>
                                                 </div>
                                             </div>
                                         </div>
@@ -30,24 +30,26 @@
                                         <div class="row mb-3">
                                             <div class="col-md-6">
                                                 <div class="form-floating mb-3 mb-md-0">
-                                                    <input class="form-control" id="inputPassword" type="password" placeholder="Create a password">
-                                                    <label for="inputPassword">Contraseña</label>
+                                                    <input class="form-control" id="inputNumphone" type="text" placeholder="Enter your phone">
+                                                    <label for="inputFirstName">Telefono</label>
                                                 </div>
                                             </div>
                                             <div class="col-md-6">
-                                                <div class="form-floating mb-3 mb-md-0">
-                                                    <input class="form-control" id="inputPasswordConfirm" type="password" placeholder="Confirm password">
-                                                    <label for="inputPasswordConfirm">Confirmar contraseña</label>
+                                                <div class="form-floating">
+                                                    <input class="form-control" id="inputCargo" type="text" placeholder="Enter your cargo">
+                                                    <label for="inputLastName">Cargo Contacto</label>
                                                 </div>
                                             </div>
                                         </div>
+                                        <div class="form-floating mb-3">
+                                            <textarea class="form-control" name="mensaje" id="inputDescription" type="text" placeholder="Descripcion" rows="50" required></textarea>
+                                            <label for="inputEmail">Descripcion</label>
+                                        </div>
+
                                         <div class="mt-4 mb-0">
-                                            <div class="d-grid"><a class="btn btn-primary btn-block" [routerLink] = "['/registro']">Inicie con su plan hoy!</a></div>
+                                            <div class="d-grid"><a class="btn btn-primary btn-block" [routerLink] = "['/env-informacion']">Enviar</a></div>
                                         </div>
                                     </form>
-                                </div>
-                                <div class="card-footer text-center py-3">
-                                    <div class="small"><a [routerLink] = "['/login']">Ya posee una cuenta? Inicie sesión</a></div>
                                 </div>
                             </div>
                         </div>
