--- a/app/templates/envioCorreo.html
+++ b/app/templates/envioCorreo.html
@@ -2,7 +2,7 @@
     <head></head>
     <body>
          <div class = 'center'> 
-                <h3>{{nombre}} {{apellido}} gracias por contratar nuestros servicios</h3> 
+                <h3>{{nombre}} gracias por contratar nuestros servicios</h3> 
                 <p>
                     En el siguiente enlace puede acceder a la plataforma para comenzar con el sistema
                 </p>       
