--- a/Proyecto/src/app/componentes/pagina_comercial/nav/nav.component.html
+++ b/Proyecto/src/app/componentes/pagina_comercial/nav/nav.component.html
@@ -1,11 +1,15 @@
 <nav class="navbar navbar-light bg-light static-top">
     <div class="container">
-        <a class="navbar-brand" [routerLink]= "['/home']" >Facturación</a>
-        <a class ="nb_element" [routerLink]="['/home']" (click) = "colornb($event)">Home</a>
-        <a class ="nb_element" [routerLink]="['/planes']" (click) = "colornb($event)">Planes</a> <!--Definir rutas -->
-        <a class ="nb_element" (click) = "colornb($event)">Noticias</a>
-        <a class ="nb_element" (click) = "colornb($event)">Contáctenos</a>
-        <a class="btn btn-primary" [routerLink] = "['/login']" >Ingresar</a>
+        <div class='navbar-brand'>
+            <a class="nav-link navbar-brand" [routerLink]= "['/home']" >Facturación</a>
+        </div>
+        <ul class="navbar-nav">
+            <li class="nav-item"><a class="nav-link nb_element" [routerLink]="['/home']" (click) = "colornb($event)">Home</a></li>
+            <li class="nav-item"><a class="nav-link nb_element" [routerLink]="['/planes']" (click) = "colornb($event)">Planes</a> <!--Definir rutas --></li>
+            <li class="nav-item"><a class="nav-link nb_element" (click) = "colornb($event)">Noticias</a></li>
+            <li class="nav-item"><a class="nav-link nb_element" (click) = "colornb($event)">Contáctenos</a></li>
+            <li class="nav-item"><a class="nav-link btn btn-primary  py-2 px-3" [routerLink]='["login/"]'>Ingresar</a></li>
+        </ul>    
     </div>
 </nav>
 
