--- a/Proyecto/src/app/login/login.component.html
+++ b/Proyecto/src/app/login/login.component.html
@@ -8,13 +8,13 @@
                             <div class="card shadow-lg border-0 rounded-lg mt-5">
                                 <div class="card-header"><h3 class="text-center font-weight-light my-4">Login</h3></div>
                                 <div class="card-body">
-                                    <form>
+                                    <form action="http://localhost:8000/api/auth/" method="POST">
                                         <div class="form-floating mb-3">
-                                            <input class="form-control" id="inputEmail" type="email" placeholder="name@example.com">
-                                            <label for="inputEmail">Email address</label>
+                                            <input [(ngModel)]="user.email" class="form-control" id="inputUser" type="text" placeholder="username" name="username" minlength='4'>
+                                            <label for="inputEmail">Username</label>
                                         </div>
                                         <div class="form-floating mb-3">
-                                            <input class="form-control" id="inputPassword" type="password" placeholder="Password">
+                                            <input [(ngModel)]="user.password" class="form-control" id="inputPassword" type="password" placeholder="password" name="password" minlength='8'>
                                             <label for="inputPassword">Password</label>
                                         </div>
                                         <div class="form-check mb-3">
@@ -23,7 +23,8 @@
                                         </div>
                                         <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
                                             <a class="small" href="password.html">Forgot Password?</a>
-                                            <a class="btn btn-primary" href="index.html">Login</a>
+                                            <input type="button" (click)='iniciarSesion()'  value="Ingresar">
+                                            <input type='hidden' name="csrfmiddlewaretoken">
                                         </div>
                                     </form>
                                 </div>
