--- a/Proyecto/src/app/componentes/pagina_comercial/confirmacion/confirmacion.component.html
+++ b/Proyecto/src/app/componentes/pagina_comercial/confirmacion/confirmacion.component.html
@@ -26,7 +26,7 @@
                 <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
                     <tr>
                         <td bgcolor="#ffffff" align="left" style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                            <p id="confirmacion" style="margin: 0;">Estamos emocionados de que empieces con nosotros. Te hemos enviado un correo de confirmación para que puedas acceder y llenar los campos con tu información para que empieces a disfrutar de nuestros servicios.</p>
+                            <p id="confirmacion" style="margin: 0;">Estamos emocionados de que empieces con nosotros. Te hemos enviado un correo de confirmación para que puedas acceder y completar los campos faltantes para que empieces a disfrutar de nuestros servicios.</p>
                         </td>
                     </tr>
                                         
