--- a/Proyecto/src/app/componentes/pagina_comercial/registro/registro.component.html
+++ b/Proyecto/src/app/componentes/pagina_comercial/registro/registro.component.html
@@ -8,23 +8,23 @@
                             <div class="card shadow-lg border-0 rounded-lg mt-5">
                                 <div class="card-header"><h3 class="text-center font-weight-light my-4">Si desea adquirir mayor información sobre nuestros planes.<br> Puede ponerse en contacto, para que uno de nuestros encargado lo atienda de manera personalizada.</h3></div>
                                 <div class="card-body">
-                                    <form>
+                                    <form action="http://localhost:8000/registro/" method="POST">
                                         <div class="row mb-3">
                                             <div class="col-md-6">
                                                 <div class="form-floating mb-3 mb-md-0">
-                                                    <input class="form-control" id="inputRazonSocialName" type="text" placeholder="Ingresa nombre de tu empresa">
+                                                    <input class="form-control" id="inputRazonSocialName" name="razonsocial" type="text" placeholder="Ingresa nombre de tu empresa">
                                                     <label for="inputFirstName">Razon Social</label>
                                                 </div>
                                             </div>
                                             <div class="col-md-6">
                                                 <div class="form-floating">
-                                                    <input class="form-control" id="inputNames" type="text" placeholder="Ingresa tus nombres">
+                                                    <input class="form-control" id="inputNames" name="nombre" type="text" placeholder="Ingresa tus nombres">
                                                     <label for="inputLastName">Nombres</label>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="form-floating mb-3">
-                                            <input class="form-control" id="inputEmail" type="email" placeholder="name@example.com">
+                                            <input class="form-control" id="inputEmail" name="email" type="email" placeholder="name@example.com">
                                             <label for="inputEmail">Correo electrónico</label>
                                         </div>
                                         <div class="row mb-3">
@@ -47,7 +47,7 @@
                                         </div>
 
                                         <div class="mt-4 mb-0">
-                                            <div class="d-grid"><a class="btn btn-primary btn-block" [routerLink] = "['/env-informacion']">Enviar</a></div>
+                                            <div class="d-grid"><input type="submit" value="Enviar" class="btn btn-primary btn-block"></div>
                                         </div>
                                     </form>
                                 </div>
