--- a/Proyecto/src/app/componentes/pagina_comercial/registro/registro.component.html
+++ b/Proyecto/src/app/componentes/pagina_comercial/registro/registro.component.html
@@ -8,7 +8,7 @@
                             <div class="card shadow-lg border-0 rounded-lg mt-5">
                                 <div class="card-header"><h3 class="text-center font-weight-light my-4">Si desea adquirir mayor información sobre nuestros planes.<br> Puede ponerse en contacto, para que uno de nuestros encargado lo atienda de manera personalizada.</h3></div>
                                 <div class="card-body">
-                                    <form action="http://localhost:8000/registro/" method="POST">
+                                    <form #form action="http://localhost:8000/registro/" method="POST">
                                         <div class="row mb-3">
                                             <div class="col-md-6">
                                                 <div class="form-floating mb-3 mb-md-0">
@@ -47,7 +47,7 @@
                                         </div>
 
                                         <div class="mt-4 mb-0">
-                                            <div class="d-grid"><input type="submit" value="Enviar" class="btn btn-primary btn-block"></div>
+                                            <div class="d-grid"><input type="submit" (click)="form.submit()" value="Enviar" class="btn btn-primary btn-block"></div>
                                         </div>
                                     </form>
                                 </div>
