--- a/Proyecto/src/app/componentes/pagina_comercial/create-cuenta/create-cuenta.component.css
+++ b/Proyecto/src/app/componentes/pagina_comercial/create-cuenta/create-cuenta.component.css
@@ -5,3 +5,9 @@ body{
 div[class="row justify-content-center"]{
     margin-bottom: 50px;
 }
+
+.error {
+    color: #f82929;
+    font-size: 13px;
+    margin-top: 2px;
+  }
