--- a/Proyecto/src/app/componentes/pagina_comercial/registro/registro.component.html
+++ b/Proyecto/src/app/componentes/pagina_comercial/registro/registro.component.html
@@ -30,7 +30,7 @@
                                         <div class="row mb-3">
                                             <div class="col-md-6">
                                                 <div class="form-floating mb-3 mb-md-0">
-                                                    <input class="form-control" id="inputNumphone" type="text" placeholder="Enter your phone">
+                                                    <input class="form-control" id="inputNumphone" name="telefono" type="text" placeholder="Enter your phone">
                                                     <label for="inputFirstName">Telefono</label>
                                                 </div>
                                             </div>
