--- a/Proyecto/src/app/login/login.component.html
+++ b/Proyecto/src/app/login/login.component.html
@@ -8,16 +8,20 @@
                             <div class="card shadow-lg border-0 rounded-lg mt-5">
                                 <div class="card-header"><h3 class="text-center font-weight-light my-4">Login</h3></div>
                                 <div class="card-body">
-                                    <form  action="http://localhost:8000/api/auth/" method="POST">
+                                    <form  action="http://localhost:8000/api/auth/" method="POST"
+                                    [formGroup]="login"
+                                    #formRef="ngForm">
                                         <div class="{{msg_d}}" id="user_invalid">
                                             {{msg_content}}
                                         </div>
                                         <div class="form-floating mb-3">
-                                            <input [(ngModel)]="user.email" class="form-control" id="inputUser" type="text" placeholder="username" name="username" minlength='4'>
+                                            <input formControlName="email" (input)="validacion('email')" class="form-control" id="inputUser" type="text" placeholder="username" name="username" minlength='4'>
                                             <label for="inputEmail">Username</label>
+                                            <!--
+                                            <span class="lead error" *ngIf="(formRef.submitted && login.get('email')?.hasError('required')) || login.get('email')?.hasError('minlength') ||  login.get('email')?.hasError('pattern')">Ingrese email válido</span>-->
                                         </div>
                                         <div class="form-floating mb-3">
-                                            <input [(ngModel)]="user.password" class="form-control" id="inputPassword" type="password" placeholder="password" name="password" minlength='8'>
+                                            <input formControlName="password" (input)="validacion('password')" class="form-control" id="inputPassword" type="password" placeholder="password" name="password" minlength='8'>
                                             <label for="inputPassword">Password</label>
                                         </div>
                                         <div class="form-check mb-3">
@@ -26,7 +30,7 @@
                                         </div>
                                         <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
                                             <a class="small" href="password.html">Forgot Password?</a>
-                                            <input type="button" (click)='iniciarSesion()'  value="Ingresar">
+                                            <input type="button" (click)="iniciarSesion(login.value)" value="Ingresar">
                                             <input type='hidden' name="csrfmiddlewaretoken">
                                         </div>
                                     </form>
